2006-03-21  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el: Ideas below based on patch from Sascha Wilde
	<wilde@sha-bang.de>.
	(pgg-gpg-use-agent): New variable.
	(pgg-gpg-process-region): Use it.
	(pgg-gpg-encrypt-region): Likewise.
	(pgg-gpg-encrypt-symmetric-region): Likewise.
	(pgg-gpg-decrypt-region): Likewise.
	(pgg-gpg-sign-region): Likewise.
	(pgg-gpg-possibly-cache-passphrase): Don't cache a nil password.

2006-03-21  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-agent.el (gnus-agent-queue-mail): Fix custom tag for `t'.

	* spam.el (spam-mark-new-messages-in-spam-group-as-spam): Add
	comment on version.

2006-03-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* smiley.el: Add missing test smiley.

2006-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-with-part): New macro.
	(mm-get-part): Use it; work with message/external-body as well.
	(mm-save-part): Treat name and filename equally.

	* mm-extern.el (mm-extern-cache-contents): New function.
	(mm-inline-external-body): Use it; force the part to be displayed;
	move undisplayer added to the cached handle to the parent.

	* gnus-art.el (gnus-mime-save-part-and-strip): Add name parameter.
	(gnus-mime-view-part-as-type): Work with message/external-body.

	* gnus-util.el (gnus-tool-bar-update): Bind tool-bar-mode.

2006-03-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* gmm-utils.el (gmm-image-load-path-for-library): Prefer user's
	images in image-load-path.  [Sync with image.el, revision 1.60, in
	Emacs.]

2006-03-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* gmm-utils.el (gmm-image-load-path-for-library): Pass value of
	path rather than symbol.  Always return list of directories.
	Guarantee that image directory comes first.  [Sync with image.el,
	revision 1.59, in Emacs.]

	* message.el (message-make-tool-bar): Adjust to new API of
	`gmm-image-load-path-for-library'.

	* gnus-sum.el (gnus-summary-make-tool-bar): Ditto.

	* gnus-group.el (gnus-group-make-tool-bar): Ditto.
