@@ -10907,8 +10907,10 @@ Returns nil if no thread was there to be shown."
 
 (defun gnus-map-articles (predicate articles)
   "Map PREDICATE over ARTICLES and return non-nil if any predicate is non-nil."
-  (apply 'gnus-or (mapcar predicate
-			  (mapcar 'gnus-summary-article-header articles))))
+  (apply 'gnus-or (mapcar predicaten
+			  (mapcar (lambda (number)
+				    (gnus-summary-article-header number))
+				  articles))))
 
 (defun gnus-summary-hide-all-threads (&optional predicate)
   "Hide all thread subtrees.
