@@ -1,3 +1,8 @@
+2006-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-sum.el (gnus-map-articles): Don't funcall symbol macro.
+	Reported by Ralf Wachinger <rwachinger@gmx.de>.
+
 2006-03-21  Simon Josefsson  <jas@extundo.com>
 
 	* pgg-gpg.el: Ideas below based on patch from Sascha Wilde
